# google-adk-redis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml  workflow.yml
src/google_adk_redis/: __init__.py  redis_memory_session_service.py  version.py
tests/: conftest.py  test_redis_memory_session_service.py
